--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,104 @@
-.App {
+.footer {
+  background-color: rgb(42, 42, 220);
+  width: 100%;
+  color: #fff;
+  display: flex;
   text-align: center;
+  font-size: 24px;
+  justify-content: center;
+  position: relative;
+  bottom: 0px;
+  overflow: hidden;
+  padding-top: auto;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.empty{
+  height: 20vh;
 }
+
+.main {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: auto;
+  margin-top: 100px;
+  margin-left: 200px;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+.column {
+  flex: 50%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  height: 200px;
+  width: auto;
+  vertical-align: middle;
+}
+
+
+.login-page {
+  width: 80vw;
+  /* padding: 2rem 0 2rem; */
+  margin: auto;
+}
+.form {
+  position: relative;
+  z-index: 1;
+  background: #ffffff;
+  max-width: 60vw;
+  margin: 7vw;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border-radius: 10px;
+}
+.form button {
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  outline: 0;
+  background: #2335bc;
+  width: 100%;
+  border: 0;
+  border-radius: 30px;
+  margin: 0px 0px 8px;
+  padding: 15px;
+  color: #ffffff;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.form button:hover,
+.form button:focus {
+  background: #16148f;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-4px);
+}
+.form button:active {
+  transform: translateY(2px);
+  box-shadow: 0 2.5px 5px rgba(0, 0, 0, 0.2);
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,20 +106,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
